fix_code_1